Articles and Users fixed, styles set

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<nav>
+  <button class= 'navbar' [routerLink]="['/users']">Users</button>
+  <button class= 'navbar' [routerLink]="['/users/create']">New User</button>
+  <button class= 'navbar' [routerLink]="['/articles']">Articles</button>
+  <button class= 'navbar' [routerLink]="['/articles/create']">New Article</button>
+</nav>
 <router-outlet></router-outlet>
